# email

./: .gitignore  .pre-commit-config.yaml  AUTHORS  LICENSE  README.rst  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish.yml  unit.yml
sphinxcontrib/: email.py
sphinxcontrib/email/: __init__.py  handlers.py  roles.py  utils.py
src/sphinxcontrib/email/: __init__.py  handlers.py  roles.py  utils.py
tests/: __init__.py  test_build.py
tests/roots/test-email/: conf.py  index.rst  named_email.rst  simple_email.rst
tests/test_build/: email.html  named-email.html
