[build-system]
requires = ["setuptools>=46.4", "wheel"]
build-backend = "setuptools.build_meta"

[tool.semantic_release]
version_variable = ["src/sphinxcontrib/email/__init__.py:__version__"]
commit_subject = "Bump version to v{version}"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = ["docutils", "lxml", "setuptools", "sphinx"]
