[metadata]
name = sphinxcontrib-email
version = 0.2.1
project_urls =
    GitHub: repo = https://github.com/sphinx-contrib/email
    GitHub: issues = https://github.com/sphinx-contrib/email/issues
download_url = http://pypi.python.org/pypi/sphinxcontrib-email
license = BSD-3
license_files = LICENSE
author = Christian Knittl-Frank
author_email = lcnittl@gmail.com
description = Sphinx email obfuscation extension
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Documentation
    Topic :: Utilities

[egg_info]
# tag_build = dev
# tag_date = true

[aliases]
release = egg_info -RDb '' register bdist_egg sdist upload

[options]
platforms = any
include_package_data = True
install_requires = Sphinx>=0.6
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src
