[metadata]
name = sphinxcontrib-email
url = https://github.com/sphinx-contrib/email
project_urls =
	GitHub: repo = https://github.com/sphinx-contrib/email
	GitHub: issues = https://github.com/sphinx-contrib/email/issues
download_url = http://pypi.python.org/pypi/sphinxcontrib-email
license = BSD-3
license_files = LICENSE
author = Christian Knittl-Frank
author_email = lcnittl@gmail.com
description = Sphinx email obfuscation extension
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
	Development Status :: 3 - Alpha
	Environment :: Console
	Environment :: Web Environment
	Framework :: Sphinx :: Extension
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Topic :: Documentation :: Sphinx
	Topic :: Utilities

[aliases]
release = egg_info -RDb '' register bdist_egg sdist upload

[options]
include_package_data = True
install_requires =
	lxml>=4.5.2
	Sphinx>=1.8
package_dir =
	= src
packages = find_namespace:
platforms = any
python_requires = >=3.7
setup_requires =
	setuptools_scm>=4.1
zip_safe = False

[options.packages.find]
where = src
