[metadata]
name = sphinxcontrib_email
description = Sphinx email obfuscation extension
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/sphinx-contrib/email
author = Christian Knittl-Frank
author_email = lcnittl@gmail.com
license = BSD-3-Clause
license_file = LICENSE
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Sphinx :: Extension
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation :: Sphinx
    Topic :: Utilities
download_url = http://pypi.python.org/pypi/sphinxcontrib-email
project_urls =
    GitHub: repo = https://github.com/sphinx-contrib/email
    GitHub: issues = https://github.com/sphinx-contrib/email/issues

[options]
packages = find_namespace:
install_requires =
    Sphinx>=1.8
    lxml>=4.5.2
python_requires = >=3.6
include_package_data = True
package_dir =
    = src
platforms = any
setup_requires =
    setuptools_scm>=4.1
zip_safe = False

[aliases]
release = check -rs sdist bdist_wheel

[options.packages.find]
where = src
